# go

./: .gitignore  Cargo.toml  README.md
examples/gui/: board_shader.rs  main.rs  next_shader.rs  stone_shader.rs
resources/: The_59th_Judan_Title_Match_3rd_game.sgf  game.sgf
src/: board.rs  game.rs  lib.rs  parser.rs
